--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,7 +38,7 @@
 
     <div class="chat-container col-xs-8">
         <div class="chat-header">
-            <h2>Spring WebSocket Chat Demo</h2>
+            <h2 id="user_name"></h2>
         </div>
         <div class="connecting">
             Connecting...
